@@ -106,7 +106,7 @@ extern "C"
 /**
  * Current version of the library.
  */
-#define MHD_VERSION 0x00090C00
+#define MHD_VERSION 0x00090D00
 
 /**
  * MHD-internal return code for "YES".
@@ -206,7 +206,9 @@ extern "C"
 #define MHD_HTTP_FAILED_DEPENDENCY 424
 #define MHD_HTTP_UNORDERED_COLLECTION 425
 #define MHD_HTTP_UPGRADE_REQUIRED 426
+#define MHD_HTTP_NO_RESPONSE 444
 #define MHD_HTTP_RETRY_WITH 449
+#define MHD_HTTP_BLOCKED_BY_WINDOWS_PARENTAL_CONTROLS 450
 
 #define MHD_HTTP_INTERNAL_SERVER_ERROR 500
 #define MHD_HTTP_NOT_IMPLEMENTED 501
